syntax = "proto3";

package auth_v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/patyukin/bs-auth/pkg/auth_v1;auth_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Auth API"
		version: "1.0.0"
		contact: {
			name: "Pavel Tyukin"
			email: "me@patyukin.ru"
		};
	};

	host: "localhost:8080",
	schemes: HTTP,
	schemes: HTTPS,
	consumes: "application/json",
	produces: "application/json",
};

service AuthV1 {
	rpc SignIn(SignInRequest) returns (SignInResponse) {
		option (google.api.http) = {
			post: "/api/v1/auth/sign-in"
			body: "*"
		};
	}

	rpc CheckCode(CheckCodeRequest) returns (CheckCodeResponse) {
		option (google.api.http) = {
			post: "/api/v1/auth/check-code"
			body: "*"
		};
	}
}

message SignInRequest {
	string email = 1;
	string password = 2;
	string fingerprint = 3;
}

message SignInResponse {
	string base32 = 1;
	string otpAuthUrl = 2;
}

message CheckCodeRequest {
	string code = 1;
	string fingerprint = 2;
}

message CheckCodeResponse {
	string accessToken = 1;
	string refreshToken = 2;
}
